<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_city_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/colorButtonBackground"
        android:textAllCaps="true"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="25dp"
        android:textStyle="bold"
        android:text="@string/templateCityTitle" />

    <ImageView
        android:id="@+id/img_weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/weatherPicture"
        app:srcCompat="@drawable/sun_cloud" />

    <LinearLayout
        style="@style/AppTheme.HorizontalLinearLayout">

        <TextView
            android:id="@+id/tv_temperature_label"
            android:layout_width="0px"
            android:layout_weight="1"
            style="@style/AppTheme.ForTextView.Label"
            android:text="@string/templateTemperature" />

        <TextView
            android:id="@+id/tv_temperature"
            android:layout_width="0px"
            android:layout_weight="1"
            style="@style/AppTheme.ForTextView.Result"
            android:text="@string/temperatureResult" />

    </LinearLayout>

    <LinearLayout
        style="@style/AppTheme.HorizontalLinearLayout">

        <TextView
            android:id="@+id/tv_pressure_label"
            android:layout_width="0px"
            android:layout_weight="1"
            style="@style/AppTheme.ForTextView.Label"
            android:text="@string/templatePressure" />

        <TextView
            android:id="@+id/tv_pressure"
            android:layout_width="0px"
            android:layout_weight="1"
            style="@style/AppTheme.ForTextView.Result"
            android:text="@string/templatePressureResult" />

    </LinearLayout>

    <LinearLayout
        style="@style/AppTheme.HorizontalLinearLayout">

        <TextView
            android:id="@+id/tv_wind_speed_label"
            android:layout_width="0px"
            android:layout_weight="1"
            style="@style/AppTheme.ForTextView.Label"
            android:text="@string/templateWindSpeed" />

        <TextView
            android:id="@+id/tv_wind_speed"
            android:layout_width="0px"
            android:layout_weight="1"
            style="@style/AppTheme.ForTextView.Result"
            android:text="@string/templateWindSpeedResult" />

    </LinearLayout>

    <LinearLayout
        style="@style/AppTheme.HorizontalLinearLayout">

        <TextView
            android:id="@+id/tv_humidity_label"
            android:layout_width="0px"
            android:layout_weight="1"
            style="@style/AppTheme.ForTextView.Label"
            android:text="@string/templateHumidity" />

        <TextView
            android:id="@+id/tv_humidity"
            android:layout_width="0px"
            android:layout_weight="1"
            style="@style/AppTheme.ForTextView.Result"
            android:text="@string/templateHumidityResult" />

    </LinearLayout>

    <LinearLayout
        style="@style/AppTheme.HorizontalLinearLayout">

        <TextView
            android:id="@+id/tv_sunrise_label"
            android:layout_width="0px"
            android:layout_weight="1"
            style="@style/AppTheme.ForTextView.Label"
            android:text="@string/templateSunRise" />

        <TextView
            android:id="@+id/tv_sunrise"
            android:layout_width="0px"
            android:layout_weight="1"
            style="@style/AppTheme.ForTextView.Result"
            android:text="@string/templateSunRiseResult" />

    </LinearLayout>

    <LinearLayout
        style="@style/AppTheme.HorizontalLinearLayout">

        <TextView
            android:id="@+id/tv_sunset_label"
            android:layout_width="0px"
            android:layout_weight="1"
            style="@style/AppTheme.ForTextView.Label"
            android:text="@string/templateSunSet" />

        <TextView
            android:id="@+id/tv_sunset"
            android:layout_width="0px"
            android:layout_weight="1"
            style="@style/AppTheme.ForTextView.Result"
            android:text="@string/templateSunSetResult" />

    </LinearLayout>

</LinearLayout>